CompilerInterpreteur/compiler.output
Terminals which are not used

   tCHAINE
   tCONST
   tRETURN
   tEXP
   tFIRSTARG


Rules never reduced

    9 Content: /* empty */


State 7 conflicts: 7 shift/reduce, 2 reduce/reduce
State 16 conflicts: 7 shift/reduce, 2 reduce/reduce
State 25 conflicts: 7 shift/reduce, 2 reduce/reduce
State 40 conflicts: 1 shift/reduce
State 75 conflicts: 7 shift/reduce, 2 reduce/reduce
State 98 conflicts: 7 shift/reduce, 2 reduce/reduce


Grammar

    0 $accept: Main $end

    1 Main: /* empty */
    2     | tINT tMAIN tPG tPD tAG Program tAD

    3 Program: /* empty */
    4        | Line Program

    5 Line: /* empty */
    6     | Content tSEMICOLON
    7     | If
    8     | While

    9 Content: /* empty */
   10        | VariableDeclaration
   11        | VariableDefinition
   12        | Assignment
   13        | Print

   14 VariableType: tINT
   15             | tVOID
   16             | tSTRING

   17 VariableDeclaration: VariableType tID RemVariable

   18 RemVariable: /* empty */
   19            | tCOMMA tID RemVariable

   20 Assignment: tID tEQUAL Expression

   21 VariableDefinition: VariableType tID tEQUAL Expression

   22 Expression: Expression tPLUS Expression
   23           | Expression tMINUS Expression
   24           | Expression tMUL Expression
   25           | Expression tSLASH Expression
   26           | tNB
   27           | tID

   28 While: StartWhile tPG InverseBoolean tPD tAG Program tAD

   29 StartWhile: tWHILE

   30 If: StartIf Program tAD RemainIf

   31 RemainIf: /* empty */
   32         | StartElse Program tAD

   33 StartIf: tIF tPG Boolean tPD tAG

   34 StartElse: tELSE tAG

   35 Boolean: Expression tEQUAL tEQUAL Expression
   36        | Expression tUNEQUAL Expression
   37        | Expression tLESS Expression
   38        | Expression tLESSEQUAL Expression
   39        | Expression tGREATER Expression
   40        | Expression tGREATEREQUAL Expression

   41 InverseBoolean: Expression tEQUAL tEQUAL Expression
   42               | Expression tUNEQUAL Expression
   43               | Expression tLESS Expression
   44               | Expression tLESSEQUAL Expression
   45               | Expression tGREATER Expression
   46               | Expression tGREATEREQUAL Expression

   47 Print: tPRINTF tPG tID tPD
   48      | tPRINTF tPG tQUOTE RemPrint tQUOTE tPD
   49      | tPRINTF tPG tQUOTE tPERCENTINT RemPrint tQUOTE tCOMMA tNB tPD
   50      | tPRINTF tPG tQUOTE tPERCENTINT RemPrint tQUOTE tCOMMA tID tPD
   51      | tPRINTF tPG tQUOTE RemPrint tPERCENTINT RemPrint tQUOTE tCOMMA tID tPD
   52      | tPRINTF tPG tQUOTE RemPrint tPERCENTINT RemPrint tQUOTE tCOMMA tNB tPD

   53 RemPrint: /* empty */
   54         | tID RemPrint


Terminals, with rules where they appear

$end (0) 0
error (256)
tIF (258) 33
tWHILE (259) 29
tELSE (260) 34
tMAIN (261) 2
tQUOTE (262) 48 49 50 51 52
tCHAINE (263)
tCONST (264)
tNB (265) 26 49 52
tRETURN (266)
tPRINTF (267) 47 48 49 50 51 52
tSTRING (268) 16
tAG (269) 2 28 33 34
tAD (270) 2 28 30 32
tSEMICOLON (271) 6
tCOMMA (272) 19 49 50 51 52
tPLUS (273) 22
tMINUS (274) 23
tSLASH (275) 25
tMUL (276) 24
tEQUAL (277) 20 21 35 41
tUNEQUAL (278) 36 42
tLESS (279) 37 43
tLESSEQUAL (280) 38 44
tGREATER (281) 39 45
tGREATEREQUAL (282) 40 46
tPG (283) 2 28 33 47 48 49 50 51 52
tPD (284) 2 28 33 47 48 49 50 51 52
tINT (285) 2 14
tVOID (286) 15
tID (287) 17 19 20 21 27 47 50 51 54
tEXP (288)
tFIRSTARG (289)
tPERCENTINT (290) 49 50 51 52


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
Main (37)
    on left: 1 2, on right: 0
Program (38)
    on left: 3 4, on right: 2 4 28 30 32
Line (39)
    on left: 5 6 7 8, on right: 4
Content (40)
    on left: 9 10 11 12 13, on right: 6
VariableType (41)
    on left: 14 15 16, on right: 17 21
VariableDeclaration (42)
    on left: 17, on right: 10
RemVariable (43)
    on left: 18 19, on right: 17 19
Assignment (44)
    on left: 20, on right: 12
VariableDefinition (45)
    on left: 21, on right: 11
Expression (46)
    on left: 22 23 24 25 26 27, on right: 20 21 22 23 24 25 35 36 37
    38 39 40 41 42 43 44 45 46
While (47)
    on left: 28, on right: 8
StartWhile (48)
    on left: 29, on right: 28
If (49)
    on left: 30, on right: 7
RemainIf (50)
    on left: 31 32, on right: 30
StartIf (51)
    on left: 33, on right: 30
StartElse (52)
    on left: 34, on right: 32
Boolean (53)
    on left: 35 36 37 38 39 40, on right: 33
InverseBoolean (54)
    on left: 41 42 43 44 45 46, on right: 28
Print (55)
    on left: 47 48 49 50 51 52, on right: 13
RemPrint (56)
    on left: 53 54, on right: 48 49 50 51 52 54


state 0

    0 $accept: . Main $end

    tINT  shift, and go to state 1

    $default  reduce using rule 1 (Main)

    Main  go to state 2


state 1

    2 Main: tINT . tMAIN tPG tPD tAG Program tAD

    tMAIN  shift, and go to state 3


state 2

    0 $accept: Main . $end

    $end  shift, and go to state 4


state 3

    2 Main: tINT tMAIN . tPG tPD tAG Program tAD

    tPG  shift, and go to state 5


state 4

    0 $accept: Main $end .

    $default  accept


state 5

    2 Main: tINT tMAIN tPG . tPD tAG Program tAD

    tPD  shift, and go to state 6


state 6

    2 Main: tINT tMAIN tPG tPD . tAG Program tAD

    tAG  shift, and go to state 7


state 7

    2 Main: tINT tMAIN tPG tPD tAG . Program tAD

    tIF      shift, and go to state 8
    tWHILE   shift, and go to state 9
    tPRINTF  shift, and go to state 10
    tSTRING  shift, and go to state 11
    tINT     shift, and go to state 12
    tVOID    shift, and go to state 13
    tID      shift, and go to state 14

    tIF         [reduce using rule 5 (Line)]
    tWHILE      [reduce using rule 5 (Line)]
    tPRINTF     [reduce using rule 5 (Line)]
    tSTRING     [reduce using rule 5 (Line)]
    tAD         reduce using rule 3 (Program)
    tAD         [reduce using rule 5 (Line)]
    tSEMICOLON  reduce using rule 5 (Line)
    tSEMICOLON  [reduce using rule 9 (Content)]
    tINT        [reduce using rule 5 (Line)]
    tVOID       [reduce using rule 5 (Line)]
    tID         [reduce using rule 5 (Line)]
    $default    reduce using rule 3 (Program)

    Program              go to state 15
    Line                 go to state 16
    Content              go to state 17
    VariableType         go to state 18
    VariableDeclaration  go to state 19
    Assignment           go to state 20
    VariableDefinition   go to state 21
    While                go to state 22
    StartWhile           go to state 23
    If                   go to state 24
    StartIf              go to state 25
    Print                go to state 26


state 8

   33 StartIf: tIF . tPG Boolean tPD tAG

    tPG  shift, and go to state 27


state 9

   29 StartWhile: tWHILE .

    $default  reduce using rule 29 (StartWhile)


state 10

   47 Print: tPRINTF . tPG tID tPD
   48      | tPRINTF . tPG tQUOTE RemPrint tQUOTE tPD
   49      | tPRINTF . tPG tQUOTE tPERCENTINT RemPrint tQUOTE tCOMMA tNB tPD
   50      | tPRINTF . tPG tQUOTE tPERCENTINT RemPrint tQUOTE tCOMMA tID tPD
   51      | tPRINTF . tPG tQUOTE RemPrint tPERCENTINT RemPrint tQUOTE tCOMMA tID tPD
   52      | tPRINTF . tPG tQUOTE RemPrint tPERCENTINT RemPrint tQUOTE tCOMMA tNB tPD

    tPG  shift, and go to state 28


state 11

   16 VariableType: tSTRING .

    $default  reduce using rule 16 (VariableType)


state 12

   14 VariableType: tINT .

    $default  reduce using rule 14 (VariableType)


state 13

   15 VariableType: tVOID .

    $default  reduce using rule 15 (VariableType)


state 14

   20 Assignment: tID . tEQUAL Expression

    tEQUAL  shift, and go to state 29


state 15

    2 Main: tINT tMAIN tPG tPD tAG Program . tAD

    tAD  shift, and go to state 30


state 16

    4 Program: Line . Program

    tIF      shift, and go to state 8
    tWHILE   shift, and go to state 9
    tPRINTF  shift, and go to state 10
    tSTRING  shift, and go to state 11
    tINT     shift, and go to state 12
    tVOID    shift, and go to state 13
    tID      shift, and go to state 14

    tIF         [reduce using rule 5 (Line)]
    tWHILE      [reduce using rule 5 (Line)]
    tPRINTF     [reduce using rule 5 (Line)]
    tSTRING     [reduce using rule 5 (Line)]
    tAD         reduce using rule 3 (Program)
    tAD         [reduce using rule 5 (Line)]
    tSEMICOLON  reduce using rule 5 (Line)
    tSEMICOLON  [reduce using rule 9 (Content)]
    tINT        [reduce using rule 5 (Line)]
    tVOID       [reduce using rule 5 (Line)]
    tID         [reduce using rule 5 (Line)]
    $default    reduce using rule 3 (Program)

    Program              go to state 31
    Line                 go to state 16
    Content              go to state 17
    VariableType         go to state 18
    VariableDeclaration  go to state 19
    Assignment           go to state 20
    VariableDefinition   go to state 21
    While                go to state 22
    StartWhile           go to state 23
    If                   go to state 24
    StartIf              go to state 25
    Print                go to state 26


state 17

    6 Line: Content . tSEMICOLON

    tSEMICOLON  shift, and go to state 32


state 18

   17 VariableDeclaration: VariableType . tID RemVariable
   21 VariableDefinition: VariableType . tID tEQUAL Expression

    tID  shift, and go to state 33


state 19

   10 Content: VariableDeclaration .

    $default  reduce using rule 10 (Content)


state 20

   12 Content: Assignment .

    $default  reduce using rule 12 (Content)


state 21

   11 Content: VariableDefinition .

    $default  reduce using rule 11 (Content)


state 22

    8 Line: While .

    $default  reduce using rule 8 (Line)


state 23

   28 While: StartWhile . tPG InverseBoolean tPD tAG Program tAD

    tPG  shift, and go to state 34


state 24

    7 Line: If .

    $default  reduce using rule 7 (Line)


state 25

   30 If: StartIf . Program tAD RemainIf

    tIF      shift, and go to state 8
    tWHILE   shift, and go to state 9
    tPRINTF  shift, and go to state 10
    tSTRING  shift, and go to state 11
    tINT     shift, and go to state 12
    tVOID    shift, and go to state 13
    tID      shift, and go to state 14

    tIF         [reduce using rule 5 (Line)]
    tWHILE      [reduce using rule 5 (Line)]
    tPRINTF     [reduce using rule 5 (Line)]
    tSTRING     [reduce using rule 5 (Line)]
    tAD         reduce using rule 3 (Program)
    tAD         [reduce using rule 5 (Line)]
    tSEMICOLON  reduce using rule 5 (Line)
    tSEMICOLON  [reduce using rule 9 (Content)]
    tINT        [reduce using rule 5 (Line)]
    tVOID       [reduce using rule 5 (Line)]
    tID         [reduce using rule 5 (Line)]
    $default    reduce using rule 3 (Program)

    Program              go to state 35
    Line                 go to state 16
    Content              go to state 17
    VariableType         go to state 18
    VariableDeclaration  go to state 19
    Assignment           go to state 20
    VariableDefinition   go to state 21
    While                go to state 22
    StartWhile           go to state 23
    If                   go to state 24
    StartIf              go to state 25
    Print                go to state 26


state 26

   13 Content: Print .

    $default  reduce using rule 13 (Content)


state 27

   33 StartIf: tIF tPG . Boolean tPD tAG

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 38
    Boolean     go to state 39


state 28

   47 Print: tPRINTF tPG . tID tPD
   48      | tPRINTF tPG . tQUOTE RemPrint tQUOTE tPD
   49      | tPRINTF tPG . tQUOTE tPERCENTINT RemPrint tQUOTE tCOMMA tNB tPD
   50      | tPRINTF tPG . tQUOTE tPERCENTINT RemPrint tQUOTE tCOMMA tID tPD
   51      | tPRINTF tPG . tQUOTE RemPrint tPERCENTINT RemPrint tQUOTE tCOMMA tID tPD
   52      | tPRINTF tPG . tQUOTE RemPrint tPERCENTINT RemPrint tQUOTE tCOMMA tNB tPD

    tQUOTE  shift, and go to state 40
    tID     shift, and go to state 41


state 29

   20 Assignment: tID tEQUAL . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 42


state 30

    2 Main: tINT tMAIN tPG tPD tAG Program tAD .

    $default  reduce using rule 2 (Main)


state 31

    4 Program: Line Program .

    $default  reduce using rule 4 (Program)


state 32

    6 Line: Content tSEMICOLON .

    $default  reduce using rule 6 (Line)


state 33

   17 VariableDeclaration: VariableType tID . RemVariable
   21 VariableDefinition: VariableType tID . tEQUAL Expression

    tCOMMA  shift, and go to state 43
    tEQUAL  shift, and go to state 44

    $default  reduce using rule 18 (RemVariable)

    RemVariable  go to state 45


state 34

   28 While: StartWhile tPG . InverseBoolean tPD tAG Program tAD

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression      go to state 46
    InverseBoolean  go to state 47


state 35

   30 If: StartIf Program . tAD RemainIf

    tAD  shift, and go to state 48


state 36

   26 Expression: tNB .

    $default  reduce using rule 26 (Expression)


state 37

   27 Expression: tID .

    $default  reduce using rule 27 (Expression)


state 38

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression
   35 Boolean: Expression . tEQUAL tEQUAL Expression
   36        | Expression . tUNEQUAL Expression
   37        | Expression . tLESS Expression
   38        | Expression . tLESSEQUAL Expression
   39        | Expression . tGREATER Expression
   40        | Expression . tGREATEREQUAL Expression

    tPLUS          shift, and go to state 49
    tMINUS         shift, and go to state 50
    tSLASH         shift, and go to state 51
    tMUL           shift, and go to state 52
    tEQUAL         shift, and go to state 53
    tUNEQUAL       shift, and go to state 54
    tLESS          shift, and go to state 55
    tLESSEQUAL     shift, and go to state 56
    tGREATER       shift, and go to state 57
    tGREATEREQUAL  shift, and go to state 58


state 39

   33 StartIf: tIF tPG Boolean . tPD tAG

    tPD  shift, and go to state 59


state 40

   48 Print: tPRINTF tPG tQUOTE . RemPrint tQUOTE tPD
   49      | tPRINTF tPG tQUOTE . tPERCENTINT RemPrint tQUOTE tCOMMA tNB tPD
   50      | tPRINTF tPG tQUOTE . tPERCENTINT RemPrint tQUOTE tCOMMA tID tPD
   51      | tPRINTF tPG tQUOTE . RemPrint tPERCENTINT RemPrint tQUOTE tCOMMA tID tPD
   52      | tPRINTF tPG tQUOTE . RemPrint tPERCENTINT RemPrint tQUOTE tCOMMA tNB tPD

    tID          shift, and go to state 60
    tPERCENTINT  shift, and go to state 61

    tPERCENTINT  [reduce using rule 53 (RemPrint)]
    $default     reduce using rule 53 (RemPrint)

    RemPrint  go to state 62


state 41

   47 Print: tPRINTF tPG tID . tPD

    tPD  shift, and go to state 63


state 42

   20 Assignment: tID tEQUAL Expression .
   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression

    tPLUS   shift, and go to state 49
    tMINUS  shift, and go to state 50
    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 20 (Assignment)


state 43

   19 RemVariable: tCOMMA . tID RemVariable

    tID  shift, and go to state 64


state 44

   21 VariableDefinition: VariableType tID tEQUAL . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 65


state 45

   17 VariableDeclaration: VariableType tID RemVariable .

    $default  reduce using rule 17 (VariableDeclaration)


state 46

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression
   41 InverseBoolean: Expression . tEQUAL tEQUAL Expression
   42               | Expression . tUNEQUAL Expression
   43               | Expression . tLESS Expression
   44               | Expression . tLESSEQUAL Expression
   45               | Expression . tGREATER Expression
   46               | Expression . tGREATEREQUAL Expression

    tPLUS          shift, and go to state 49
    tMINUS         shift, and go to state 50
    tSLASH         shift, and go to state 51
    tMUL           shift, and go to state 52
    tEQUAL         shift, and go to state 66
    tUNEQUAL       shift, and go to state 67
    tLESS          shift, and go to state 68
    tLESSEQUAL     shift, and go to state 69
    tGREATER       shift, and go to state 70
    tGREATEREQUAL  shift, and go to state 71


state 47

   28 While: StartWhile tPG InverseBoolean . tPD tAG Program tAD

    tPD  shift, and go to state 72


state 48

   30 If: StartIf Program tAD . RemainIf

    tELSE  shift, and go to state 73

    $default  reduce using rule 31 (RemainIf)

    RemainIf   go to state 74
    StartElse  go to state 75


state 49

   22 Expression: Expression tPLUS . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 76


state 50

   23 Expression: Expression tMINUS . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 77


state 51

   25 Expression: Expression tSLASH . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 78


state 52

   24 Expression: Expression tMUL . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 79


state 53

   35 Boolean: Expression tEQUAL . tEQUAL Expression

    tEQUAL  shift, and go to state 80


state 54

   36 Boolean: Expression tUNEQUAL . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 81


state 55

   37 Boolean: Expression tLESS . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 82


state 56

   38 Boolean: Expression tLESSEQUAL . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 83


state 57

   39 Boolean: Expression tGREATER . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 84


state 58

   40 Boolean: Expression tGREATEREQUAL . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 85


state 59

   33 StartIf: tIF tPG Boolean tPD . tAG

    tAG  shift, and go to state 86


state 60

   54 RemPrint: tID . RemPrint

    tID  shift, and go to state 60

    $default  reduce using rule 53 (RemPrint)

    RemPrint  go to state 87


state 61

   49 Print: tPRINTF tPG tQUOTE tPERCENTINT . RemPrint tQUOTE tCOMMA tNB tPD
   50      | tPRINTF tPG tQUOTE tPERCENTINT . RemPrint tQUOTE tCOMMA tID tPD

    tID  shift, and go to state 60

    $default  reduce using rule 53 (RemPrint)

    RemPrint  go to state 88


state 62

   48 Print: tPRINTF tPG tQUOTE RemPrint . tQUOTE tPD
   51      | tPRINTF tPG tQUOTE RemPrint . tPERCENTINT RemPrint tQUOTE tCOMMA tID tPD
   52      | tPRINTF tPG tQUOTE RemPrint . tPERCENTINT RemPrint tQUOTE tCOMMA tNB tPD

    tQUOTE       shift, and go to state 89
    tPERCENTINT  shift, and go to state 90


state 63

   47 Print: tPRINTF tPG tID tPD .

    $default  reduce using rule 47 (Print)


state 64

   19 RemVariable: tCOMMA tID . RemVariable

    tCOMMA  shift, and go to state 43

    $default  reduce using rule 18 (RemVariable)

    RemVariable  go to state 91


state 65

   21 VariableDefinition: VariableType tID tEQUAL Expression .
   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression

    tPLUS   shift, and go to state 49
    tMINUS  shift, and go to state 50
    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 21 (VariableDefinition)


state 66

   41 InverseBoolean: Expression tEQUAL . tEQUAL Expression

    tEQUAL  shift, and go to state 92


state 67

   42 InverseBoolean: Expression tUNEQUAL . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 93


state 68

   43 InverseBoolean: Expression tLESS . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 94


state 69

   44 InverseBoolean: Expression tLESSEQUAL . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 95


state 70

   45 InverseBoolean: Expression tGREATER . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 96


state 71

   46 InverseBoolean: Expression tGREATEREQUAL . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 97


state 72

   28 While: StartWhile tPG InverseBoolean tPD . tAG Program tAD

    tAG  shift, and go to state 98


state 73

   34 StartElse: tELSE . tAG

    tAG  shift, and go to state 99


state 74

   30 If: StartIf Program tAD RemainIf .

    $default  reduce using rule 30 (If)


state 75

   32 RemainIf: StartElse . Program tAD

    tIF      shift, and go to state 8
    tWHILE   shift, and go to state 9
    tPRINTF  shift, and go to state 10
    tSTRING  shift, and go to state 11
    tINT     shift, and go to state 12
    tVOID    shift, and go to state 13
    tID      shift, and go to state 14

    tIF         [reduce using rule 5 (Line)]
    tWHILE      [reduce using rule 5 (Line)]
    tPRINTF     [reduce using rule 5 (Line)]
    tSTRING     [reduce using rule 5 (Line)]
    tAD         reduce using rule 3 (Program)
    tAD         [reduce using rule 5 (Line)]
    tSEMICOLON  reduce using rule 5 (Line)
    tSEMICOLON  [reduce using rule 9 (Content)]
    tINT        [reduce using rule 5 (Line)]
    tVOID       [reduce using rule 5 (Line)]
    tID         [reduce using rule 5 (Line)]
    $default    reduce using rule 3 (Program)

    Program              go to state 100
    Line                 go to state 16
    Content              go to state 17
    VariableType         go to state 18
    VariableDeclaration  go to state 19
    Assignment           go to state 20
    VariableDefinition   go to state 21
    While                go to state 22
    StartWhile           go to state 23
    If                   go to state 24
    StartIf              go to state 25
    Print                go to state 26


state 76

   22 Expression: Expression . tPLUS Expression
   22           | Expression tPLUS Expression .
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression

    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 22 (Expression)


state 77

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   23           | Expression tMINUS Expression .
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression

    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 23 (Expression)


state 78

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression
   25           | Expression tSLASH Expression .

    $default  reduce using rule 25 (Expression)


state 79

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   24           | Expression tMUL Expression .
   25           | Expression . tSLASH Expression

    $default  reduce using rule 24 (Expression)


state 80

   35 Boolean: Expression tEQUAL tEQUAL . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 101


state 81

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression
   36 Boolean: Expression tUNEQUAL Expression .

    tPLUS   shift, and go to state 49
    tMINUS  shift, and go to state 50
    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 36 (Boolean)


state 82

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression
   37 Boolean: Expression tLESS Expression .

    tPLUS   shift, and go to state 49
    tMINUS  shift, and go to state 50
    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 37 (Boolean)


state 83

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression
   38 Boolean: Expression tLESSEQUAL Expression .

    tPLUS   shift, and go to state 49
    tMINUS  shift, and go to state 50
    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 38 (Boolean)


state 84

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression
   39 Boolean: Expression tGREATER Expression .

    tPLUS   shift, and go to state 49
    tMINUS  shift, and go to state 50
    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 39 (Boolean)


state 85

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression
   40 Boolean: Expression tGREATEREQUAL Expression .

    tPLUS   shift, and go to state 49
    tMINUS  shift, and go to state 50
    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 40 (Boolean)


state 86

   33 StartIf: tIF tPG Boolean tPD tAG .

    $default  reduce using rule 33 (StartIf)


state 87

   54 RemPrint: tID RemPrint .

    $default  reduce using rule 54 (RemPrint)


state 88

   49 Print: tPRINTF tPG tQUOTE tPERCENTINT RemPrint . tQUOTE tCOMMA tNB tPD
   50      | tPRINTF tPG tQUOTE tPERCENTINT RemPrint . tQUOTE tCOMMA tID tPD

    tQUOTE  shift, and go to state 102


state 89

   48 Print: tPRINTF tPG tQUOTE RemPrint tQUOTE . tPD

    tPD  shift, and go to state 103


state 90

   51 Print: tPRINTF tPG tQUOTE RemPrint tPERCENTINT . RemPrint tQUOTE tCOMMA tID tPD
   52      | tPRINTF tPG tQUOTE RemPrint tPERCENTINT . RemPrint tQUOTE tCOMMA tNB tPD

    tID  shift, and go to state 60

    $default  reduce using rule 53 (RemPrint)

    RemPrint  go to state 104


state 91

   19 RemVariable: tCOMMA tID RemVariable .

    $default  reduce using rule 19 (RemVariable)


state 92

   41 InverseBoolean: Expression tEQUAL tEQUAL . Expression

    tNB  shift, and go to state 36
    tID  shift, and go to state 37

    Expression  go to state 105


state 93

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression
   42 InverseBoolean: Expression tUNEQUAL Expression .

    tPLUS   shift, and go to state 49
    tMINUS  shift, and go to state 50
    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 42 (InverseBoolean)


state 94

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression
   43 InverseBoolean: Expression tLESS Expression .

    tPLUS   shift, and go to state 49
    tMINUS  shift, and go to state 50
    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 43 (InverseBoolean)


state 95

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression
   44 InverseBoolean: Expression tLESSEQUAL Expression .

    tPLUS   shift, and go to state 49
    tMINUS  shift, and go to state 50
    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 44 (InverseBoolean)


state 96

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression
   45 InverseBoolean: Expression tGREATER Expression .

    tPLUS   shift, and go to state 49
    tMINUS  shift, and go to state 50
    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 45 (InverseBoolean)


state 97

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression
   46 InverseBoolean: Expression tGREATEREQUAL Expression .

    tPLUS   shift, and go to state 49
    tMINUS  shift, and go to state 50
    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 46 (InverseBoolean)


state 98

   28 While: StartWhile tPG InverseBoolean tPD tAG . Program tAD

    tIF      shift, and go to state 8
    tWHILE   shift, and go to state 9
    tPRINTF  shift, and go to state 10
    tSTRING  shift, and go to state 11
    tINT     shift, and go to state 12
    tVOID    shift, and go to state 13
    tID      shift, and go to state 14

    tIF         [reduce using rule 5 (Line)]
    tWHILE      [reduce using rule 5 (Line)]
    tPRINTF     [reduce using rule 5 (Line)]
    tSTRING     [reduce using rule 5 (Line)]
    tAD         reduce using rule 3 (Program)
    tAD         [reduce using rule 5 (Line)]
    tSEMICOLON  reduce using rule 5 (Line)
    tSEMICOLON  [reduce using rule 9 (Content)]
    tINT        [reduce using rule 5 (Line)]
    tVOID       [reduce using rule 5 (Line)]
    tID         [reduce using rule 5 (Line)]
    $default    reduce using rule 3 (Program)

    Program              go to state 106
    Line                 go to state 16
    Content              go to state 17
    VariableType         go to state 18
    VariableDeclaration  go to state 19
    Assignment           go to state 20
    VariableDefinition   go to state 21
    While                go to state 22
    StartWhile           go to state 23
    If                   go to state 24
    StartIf              go to state 25
    Print                go to state 26


state 99

   34 StartElse: tELSE tAG .

    $default  reduce using rule 34 (StartElse)


state 100

   32 RemainIf: StartElse Program . tAD

    tAD  shift, and go to state 107


state 101

   22 Expression: Expression . tPLUS Expression
   23           | Expression . tMINUS Expression
   24           | Expression . tMUL Expression
   25           | Expression . tSLASH Expression
   35 Boolean: Expression tEQUAL tEQUAL Expression .

    tPLUS   shift, and go to state 49
    tMINUS  shift, and go to state 50
    tSLASH  shift, and go to state 51
    tMUL    shift, and go to state 52

    $default  reduce using rule 35 (Boolean)


state 102

   49 Print: tPRINTF tPG tQUOTE tPERCENTINT RemPrint tQUOTE . tCOMMA tNB tPD
   50      | tPRINTF tPG tQUOTE tPERCENTINT RemPrint tQUOTE . tCOMMA tID tPD

    tCOMMA  shift, and go to state 108


state 103

   48 Print: tPRINTF tPG tQUOTE RemPrint tQUOTE tPD .

    $default  reduce using rule 48 (Print)


state 104

   51 Print: tPRINTF tPG tQUOTE RemPrint tPERCENTINT RemPrint . tQUOTE tCOMMA tID tPD
   52      | tPRINTF tPG tQUOTE RemPrint tPERCENTINT RemPrint . tQUOTE tCOMMA tNB tPD
